--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ⚡>
   <head>
     <meta charset="utf-8">
-    <title>Project Commit Stats</title>
+    <title>Project1 commit stats | DCG Web 2025a</title>
     <link rel="canonical" href="self.html">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <style amp-boilerplate>body{visibility:hidden}</style>
