fix: add new 'amp-boilerplate' tag to pass validation

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="canonical" href="self.html">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <style amp-boilerplate>body{visibility:hidden}</style>
+    <noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>        
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <script async custom-element="amp-story" src="https://cdn.ampproject.org/v0/amp-story-1.0.js"></script>
     <style amp-custom>
