fix: replace fixed style in page1

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         background-color: #00441b;
         padding: 0.2em 0.4em;
         border-radius: 0.3em;
-        font-size: 52px;
+        font-size: 3rem;
         font-weight: bold;
       }
       em, .highlight-data {
@@ -44,12 +44,12 @@
         padding: 32px;
       }
       .metric-block {
-        margin-top: 32px;
+        margin-top: 10%;
         text-align: center;
       }
       .metric-label {
-        margin-bottom: 18px;
-        font-size: 18px;
+        margin-bottom: 12%;
+        font-size: 112.5%;
       }
       .chart-wrapper {
         display: flex;
